Fully refactored working code

--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -16,4 +16,4 @@ training:
   eval_iters: 200
 
 device:
-  type: 'cuda'  # or 'cpu' based on availability
+  type: 'cpu'  # or 'cuda' based on availability
